fixed overflow on browse profile, scroll fix - defaults-layout-main has been given a height so the concept of   scrolling applies - browse-container given a width temporarily to prevent overflow. in the   future it's better to consider a well formed flexbox if   possible/incorporating the nav width - fixed minor spelling error and commmented out debug

--- a/src/components/Browse/Browse.scss
+++ b/src/components/Browse/Browse.scss
@@ -11,6 +11,7 @@ $cardHeight: 240px;
 }
 
 .browse-container {
+  width: 80vw; // todo: flexboxes in the future
   overflow: clip;
 }
 
